--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "async-sema": "^3.1.1",
     "axios": "^1.6.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
