--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.42.5",
     "async-sema": "^3.1.1",
     "axios": "^1.6.8",
     "express": "^4.18.2",
