--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
+    "react-spring": "^9.7.3",
     "styled-components": "^6.1.8",
     "styled-reset": "^4.5.2"
   },
